A more complete implementation of building classes with the classfile API